# bio-qc-portal

./: .dockerignore  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: api.yml  web.yml
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml  seed.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: a1b2c3d4e5f6_initial.py
apps/api/app/: main.py
apps/api/app/api/: deps.py  router.py
apps/api/app/api/routes/: projects.py  runs.py  samples.py
apps/api/app/core/: config.py
apps/api/app/db/: session.py
apps/api/app/models/: project.py  qc_metric.py  run.py  sample.py
apps/api/app/repositories/: project.py  run.py  sample.py
apps/api/app/schemas/: project.py  qc_metric.py  run.py  sample.py
apps/api/app/services/: project.py  qc.py  run.py  sample.py
apps/api/app/services/parsers/: manifest_csv.py  multiqc_json.py
apps/api/app/tests/: conftest.py  test_api.py  test_parsers.py  test_qc.py
apps/web/: .env.example  Dockerfile  eslint.config.js  index.html  package.json  tsconfig.node.json  vite.config.ts
apps/web/src/: main.tsx  types.ts
apps/web/src/api/: client.ts  projects.ts  runs.ts  samples.ts
apps/web/src/components/: CreateProjectModal.tsx  CreateRunModal.tsx  FileImportForm.tsx  ImportForm.tsx  (+4 more)
docs/adr/: 001-fastapi-backend.md  002-react-vite-frontend.md  003-postgresql-sqlalchemy.md  004-mock-multiqc-data.md  005-threshold-based-qc.md
samples/: multiqc_like_data.json  qc_metrics.json  sample_manifest.csv
(+4 files in other folders)
