[project]
name = "bio-qc-portal-api"
version = "0.1.0"
description = "BioQC Portal REST API"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "sqlalchemy>=2.0.49",
    "alembic>=1.18.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "httpx>=0.28.1",
    "ruff>=0.15.13",
    "mypy>=2.1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
strict = false
ignore_missing_imports = true
exclude = ["alembic/"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
